Implement Jul 2026 form updates and LGO fiscal year controls.
Add admin-managed fiscal year APIs, enforce two-year LGO records with gender split on the backend, and update BYP/IYP/LGO collector forms plus admin fiscal year settings on the frontend.

Co-authored-by: Cursor <cursoragent@cursor.com>